 * The module now reuses the internal curl instance in each MDs interaction
   with the ACME server. This means that open connections are reused.

v2.3.4 (BETA)
----------------------------------------------------------------------------------------------------
 * Test case and work around for domain names > 64 octets. Fixes #227.
   When the first DNS name of an MD is longer than 63 octets, the certificate
   request will not contain a CN field, but leave it up to the CA to choose one.
   Currently, Lets Encrypt looks for a shorter name in the SAN list given and
   fails the request if none is found. But it is really up to the CA (and what
   browsers/libs accept here) and may change over the years. That is why
   the decision is best made at the CA.
 * Reverted setting the environment variables for MDMessageCmd and MDNotifyCmd. This
   prevented the inheritance of existing environment variables as there seems to be
   no portable way to iterate those on all platforms. This led to a regression on
   Windows, see #198.
 * Fixed several places where the 'badNonce' return code from an ACME server was not
   handled correctly. The test server 'pebble' simulates this behaviour by default
   and helps nicely in verifying this behaviour. Thanks, pebble!
 * Removed support for ACMEv1 servers. The only known installation used to be Let's Encrypt
   which is disabled that version more than a year ago.
 * Fixed a bug introduced by the multiple private key feature that did not trigger
   the tls-alpn-01 challenge at the ACME server on the first attempt. (It picked it up
   on the subsequent ones, though, prolonging the test suite but not failing it.)
 * first successful test run against the pebble server. See README.md for details
   on how to set this up.
Merges from 2.2.x maintenance branch:
 * Changed minimal curl version necessary to 7.29, as proposed by @xl32.
 * Retry delays now have a random +/-[0-50]% modification applied to let retries from several